--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "butopeii",
-  "version": "0.1.0",
+  "name": "csFlex",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@splidejs/react-splide": "^0.7.3",
     "@splidejs/splide": "^4.0.1",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
